syntax = "proto3";

package sum;

service SumService {
    rpc  Sum (SumRequest) returns (SumResponse) {};
}

message Sum {
    double first_number = 1;
    double second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    double result = 1;
}